<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_usuarioLogin"
        app:endIconMode="clear_text"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:startIconDrawable="@drawable/usuario_circulo_icono"
        tools:layout_editor_absoluteX="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_EditUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        app:endIconMode="password_toggle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
        app:startIconDrawable="@drawable/candado_icono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_EditPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/imageButton6"
        android:layout_width="241dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:onClick="GoToMenu"
        android:text="@string/txt_mainBoton"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="@color/AzulCLaro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <TextView
        android:id="@+id/tv_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="GoLink"
        android:text="@string/txt_LinkMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="414dp"
        android:layout_height="240dp"
        android:contentDescription="@string/txt_vacio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/componente" />


</androidx.constraintlayout.widget.ConstraintLayout>