<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".CalendarioActivity">


<ImageView
    android:id="@+id/imageView2"
    android:layout_width="414dp"
    android:layout_height="68dp"
    android:contentDescription=""
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/fondo_comun_titulo" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_CalendarioActivity"
    android:textColor="@color/colorWhite"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
    app:layout_constraintEnd_toEndOf="@+id/imageView2"
    app:layout_constraintStart_toStartOf="@+id/imageView2"
    app:layout_constraintTop_toTopOf="@+id/imageView2" />

<LinearLayout
    android:id="@+id/LinearLayout"
    android:layout_width="391dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginTop="31dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Media -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->


                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="209dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/txt_inicio"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ibtn_FechaInicio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="onClick_fechaInicio"
                            android:text="@string/txt_vacio"
                            android:textAppearance="@style/Widget.MaterialComponents.Button"
                            android:textColor="#FFFFFF"
                            android:textSize="24sp"
                            app:backgroundTint="@color/AzulCLaro" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

                <LinearLayout
                    android:layout_width="209dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/txt_termino"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ibtn_FechaFin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="onClick_fechaFin"
                        android:text="@string/txt_vacio"
                        android:textAppearance="@style/Widget.MaterialComponents.Button"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        app:backgroundTint="@color/AzulCLaro" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal"
    android:padding="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/imageButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="Cancelar"
            android:text="@string/btn_cancel"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="@color/AzulCLaro" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/imageButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick_Guardar"
            android:text="@string/btn_save"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="@color/AzulCLaro" />
    </LinearLayout>
</LinearLayout>

<TextView
    android:id="@+id/inv_userid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="16dp"
    android:text="@string/txt_vacio"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/inv_gauges"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="16dp"
    android:text="@string/txt_vacio"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>