<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LecturasActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="68dp"
        android:contentDescription=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_comun_titulo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_agregarLectura"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="31dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Media -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->


                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="67dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/txt_id"
                                android:textSize="24sp" />

                            <EditText
                                android:id="@+id/txt_medidor"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="152dp"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="3dp"
                                android:background="#F2F2F2"
                                android:ems="0"
                                android:inputType="text"
                                android:text="@string/txt_vacio"
                                android:textColor="@android:color/holo_blue_bright" />

                            <Button
                                android:id="@+id/btn_buscar"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="3dp"
                                android:contentDescription="@string/app_name"
                                android:onClick="onClick_verUsuarios"
                                android:scaleType="fitCenter"
                                android:textAppearance="@style/Widget.MaterialComponents.Button"
                                android:textSize="24sp"
                                app:backgroundTint="@color/AzulCLaro"
                                app:icon="@drawable/ic_buscar"
                                app:srcCompat="@drawable/ic_add" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

                    <LinearLayout
                        android:id="@+id/linearLayout8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/txt_Lectura"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_marginHorizontal="14dp"
                            android:textSize="24sp"/>

                        <EditText
                            android:id="@+id/txt_lectura"
                            android:layout_width="149dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="3dp"
                            android:inputType="number"
                            android:text="@string/txt_vacio"
                            android:textSize="24sp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_address" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="209dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_foto"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/ibtn_check_foto"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:background="@color/AzulCLaro"
                        android:contentDescription="@string/app_name"
                        android:onClick="onClick_tomaFoto"
                        android:scaleType="fitCenter"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_camera" />
                </LinearLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txt_nombre"
                        android:textStyle="bold"
                        android:layout_width="330dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/txt_vacio"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txt_apellidos"
                        android:textStyle="bold"
                        android:layout_width="330dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/txt_vacio"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/txt_numberConsumption"
                        android:layout_width="330dp"
                        android:layout_height="37dp"
                        android:layout_gravity="center_horizontal"
                        android:foregroundGravity="center"
                        android:gravity="center_horizontal"
                        android:text="@string/txt_vacio"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick_Guardar"
                android:text="@string/btn_save"
                android:layout_margin="3dp"
                android:textAppearance="@style/Widget.MaterialComponents.Button"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/AzulCLaro" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/inv_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_vacio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inv_gauges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_vacio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>